# bracket

./: .coverage  .gitignore  README-KR.md  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: google_adk_file_task_agent.py  langchain_research_agent.py  langgraph_code_fix_agent.py
src/bracket/: __init__.py
src/bracket/adapters/: __init__.py
src/bracket/adapters/common/: __init__.py  base.py  conformance.py  lifecycle.py
src/bracket/adapters/generic/: __init__.py
src/bracket/adapters/google_adk/: __init__.py
src/bracket/adapters/langchain/: __init__.py
src/bracket/adapters/langgraph/: __init__.py
src/bracket/core/: __init__.py  approval.py  artifacts.py  contracts.py  events.py  evidence.py  exceptions.py  harness.py  policy.py  profiles.py  requirements.py  verdict.py
src/bracket/probes/: __init__.py  base.py  command.py  custom.py  filesystem.py  git.py  http.py  pytest_probe.py  runner.py
src/bracket/replay/: __init__.py  llm_playback.py  llm_recording.py  run_replay.py  serializers.py
tests/: test_adapter.py  test_conformance.py  test_core.py  test_custom_probe.py  test_google_adk_adapter.py  test_langchain_adapter.py  test_langgraph_adapter.py  test_policy.py  test_probes.py  test_profiles.py  test_replay.py  test_replay_extra.py  test_serialization.py  test_text_answer.py
